[package]
name = "weatherkit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshuagawley/weatherkit"
description = "Rust bindings for the WeatherKit REST API"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
serde_json = "1.0.117"
